--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.android.support:recyclerview-v7:26.1.0'
+    //noinspection GradleCompatible
     compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+
+
 
 
 }
